<resources>
    <string name="app_name">Mukulele</string>
    <string name="already_registered_login_here">Already Registered? Login Here</string>
    <string name="new_user_create_account_here">New User? Create Account Here</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="register_email_address">Email Address</string>
    <string name="register_password">Password</string>
    <string name="login_email_address">Email Address</string>
    <string name="login_password">Password</string>
    <string name="registerTitle">Create New Account</string>
    <string name="loginTitle">Login Here</string>
    <string name="logout">Logout</string>
    <string name="level1">Level 1</string>
    <string name="song_challenge">Song Challenge</string>
    <string name="game_view_content_description">Game view</string>
</resources>